style.css
@font-face {
    font-display: swap;
    font-family: "Oleo Script", system-ui;
    font-weight: 700;
    font-style: normal;
    src: url('./font/OleoScript-Bold.ttf') format('ttf');
}

html {
    scroll-behavior: smooth;
}

body {
    color: whitesmoke;
    font-family: "Oleo Script", system-ui;
    background-color: #172c47;
    margin: 0;
    min-height: calc(100vh - 120px);
}

h1 {
    text-align: center;
    text-wrap: balance;
}

h2 {
    text-align: center;
    text-wrap: balance;
}

/* BODY HEADER */
.header_main {
    background-color: #082029;
    padding-left: 20px;
    height: 96px;
    display: flex;
    align-items: center;
}

.header_main_img {
    height: 64px;
}

/* MAIN */
main {
    height: calc(100vh - 96px - 96px);
    display: flex;
    flex-direction: column;
    align-items: center;
}

.album {
    max-width: 768px;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    gap: 48px;
}

.img_little {
    object-fit: cover;
    width: 128px;
    height: 128px;
    border: 4px solid white;
    border-radius: 24px;
}

.img_little:hover {
    border: 4px solid #08aefc;
    -webkit-box-shadow: 0px 0px 15px 4px rgba(8, 174, 252, 0.83);
    box-shadow: 0px 0px 15px 4px rgba(8, 174, 252, 0.83);
    cursor: pointer;
}

/* DIALOG */
dialog {
    background-color: #254670;
    width: 768px;
    height: 768px;
    border: 4px solid #08affc8f;
    -webkit-box-shadow: 0px 0px 15px 4px rgba(8, 175, 252, 0.534);
    box-shadow: 0px 0px 15px 4px rgba(8, 174, 252, 0.534);
    border-radius: 20px;
}

.dialog_header {
    color: whitesmoke;
    background-color: #254670;
    height: 64px;
    display: flex;
    justify-content: space-between;
    align-items: baseline;
}

.section_dialog {
    height: calc(768px - (64px + 64px));
    display: flex;
    justify-content: center;
}

.dialog_image_div {
    display: flex;
    justify-content: center;
    align-items: center;
}

.dialog_image {
    max-width: 92vh;
    max-height: calc(768px - (64px + 64px));
}

button {
    width: 30px;
    height: 30px;
    border-radius: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.arrow {
    padding: 3px;
    border: solid black;
    border-width: 0 3px 3px 0;
}

.arrow_left {
    transform: rotate(135deg);
    -webkit-transform: rotate(135deg);
}

.arrow_right {
    transform: rotate(-45deg);
    -webkit-transform: rotate(-45deg);
}

.footer_dialog {
    color: whitesmoke;
    background-color: #254670;
    height: 64px;
    bottom: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 64px;
}

/* BODY FOOTER */
.footer_main {
    width: 100%;
    color: #798DA0;
    background-color: #082029;
    height: 96px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

/* RESPONSIVE */
@media (max-width: 824px) {
    dialog {
        max-width: 80vh;
    }

    .dialog_image {
        max-width: 80vh;
    }
}

@media (max-width: 715px) {
    dialog {
        max-width: 70vh;
    }

    .dialog_image {
        max-width: 70vh;
    }
}

@media (max-width: 630px) {
    .img_little {
        width: 68px;
        height: 68px;
    }

    dialog {
        max-width: 60vh;
    }

    .dialog_image {
        max-width: 60vh;
    }
}

@media (max-width: 540px) {
    dialog {
        width: 50vh;
    }

    .dialog_image_div {
        align-items: center;
    }

    .dialog_image {
        max-width: 50vh;
    }

    h2 {
        font-size: 18px;
    }
}

@media (max-width: 475px) {
    dialog {
        width: 40vh;
        height: 624px;
    }

    .section_dialog {
        height: calc(620px - (64px + 64px));
    }

    .dialog_image {
        max-width: 40vh;
        max-height: 500px;
    }
}

@media (max-width: 400px) {
    dialog {
        width: 30vh;
    }

    .section_dialog {
        height: calc(624px - (64px + 64px));
    }

    .dialog_image {
        width: 30vh;
    }
}

@media (max-width: 375px) {
    .header_main_img {
        height: 48px;
    }
}

